<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/results"
        android:textAppearance="@style/QuestionTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_small"
        android:text="@string/results_description"
        android:textAppearance="@style/NormalText" />

    <TextView
        android:id="@+id/text_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_big"
        android:hint="@string/your_result"
        android:textAppearance="@style/NormalText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_big"
        android:text="@string/result_hint"
        android:textAppearance="@style/NormalText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_big"
        android:text="@string/mensa_description"
        android:textAppearance="@style/NormalText" />

    <TextView
        android:id="@+id/mensa_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_big"
        android:text="@string/mensa_link"
        android:textAppearance="@style/NormalText"
        android:textStyle="italic" />

    <Button
        android:id="@+id/back"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_big"
        android:text="@string/btn_back_to_welcome" />

    </LinearLayout>

</ScrollView>