<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.toki.iqtest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/pic"
        android:layout_width="@dimen/background_image_width"
        android:layout_height="@dimen/background_image_heigth"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top"
        android:textAppearance="@style/Title"
        android:text="@string/welcome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin"
        android:textAppearance="@style/NormalText"
        android:text="@string/content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top"
        android:textAppearance="@style/Title"
        android:text="@string/rules" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/NormalText"
        android:layout_margin="@dimen/margin"
        android:text="@string/rules_content" />

    <Button
        android:id="@+id/begin"
        android:text="@string/begin"
        android:layout_marginTop="@dimen/margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
