<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/QuestionTitle"
            android:gravity="center"
            android:text="@string/question1"/>

        <TextView
            android:id="@+id/instructions"
            android:layout_below="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_small"
            android:textAppearance="@style/NormalText"
            android:text="@string/question1_description"/>

        <TextView
            android:id="@+id/definition"
            android:layout_below="@id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_top_big"
            android:textAppearance="@style/QuestionText"
            android:text="@string/sequence1"/>

        <TextView
            android:id="@+id/your_answer"
            android:layout_below="@id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_big"
            android:textAppearance="@style/Title"
            android:text="@string/your_answer" />

        <LinearLayout
            android:id="@+id/enterAnswer1"
            android:layout_below="@id/your_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:layout_marginTop="@dimen/margin_top_big"
            android:imeOptions="actionDone"
            android:textAppearance="@style/QuestionText"
            android:hint="@string/hint_enter_your_answer"/>

        <Button
            android:id="@+id/send_button"
            android:layout_marginTop="@dimen/margin_top_big"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        </LinearLayout>

</RelativeLayout>