<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question4"
                android:textAppearance="@style/QuestionTitle" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@string/question4_description"
                android:textAppearance="@style/NormalText" />

            <ImageView
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions"
                android:layout_marginTop="@dimen/margin_top_small"
                android:contentDescription="@string/sequence4"
                android:gravity="center"
                android:src="@drawable/q4img" />

            <TextView
                android:id="@+id/your_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/definition"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/your_answer"
                android:textAppearance="@style/Title" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/group4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/a41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a41"
                android:drawableStart="@drawable/a41" />

            <RadioButton
                android:id="@+id/a42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a42"
                android:drawableStart="@drawable/a42" />

            <RadioButton
                android:id="@+id/a43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a43"
                android:drawableStart="@drawable/a43" />

            <RadioButton
                android:id="@+id/a44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a44"
                android:drawableStart="@drawable/a44" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>