<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question7"
                android:textAppearance="@style/QuestionTitle" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@string/question7_description"
                android:textAppearance="@style/NormalText" />

            <ImageView
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions"
                android:layout_marginTop="@dimen/margin_top_small"
                android:contentDescription="@string/sequence7"
                android:gravity="center"
                android:src="@drawable/q7img" />

            <TextView
                android:id="@+id/your_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/definition"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/your_answer"
                android:textAppearance="@style/Title" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/group7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/a71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a71"
                android:drawableStart="@drawable/a71" />

            <RadioButton
                android:id="@+id/a72"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a72"
                android:drawableStart="@drawable/a72" />

            <RadioButton
                android:id="@+id/a73"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a73"
                android:drawableStart="@drawable/a73" />

            <RadioButton
                android:id="@+id/a74"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_radiobutton_image"
                android:drawableLeft="@drawable/a74"
                android:drawableStart="@drawable/a74" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>